--- a/project/templates/ask_stranger/ask.html
+++ b/project/templates/ask_stranger/ask.html
@@ -7,7 +7,7 @@
     <div class="form-group">
         <label for="brief">Question essential</label>
         <input class="form-control" id="brief" placeholder="Enter essential"></input>
-        <div class="alert alert-danger collapse" role="alert">
+        <div class="alert alert-danger" role="alert">
             This field is empty!
         </div>
     </div>
@@ -15,7 +15,7 @@
     <div class="form-group">
         <label for="question">Full question</label>
         <textarea class="form-control" id="question" rows="15" placeholder="Enter full question"></textarea>
-        <div class="alert alert-danger collapse" role="alert">
+        <div class="alert alert-danger" role="alert">
             This field is empty!
         </div>
     </div>
@@ -23,7 +23,7 @@
     <div class="form-group">
         <label for="tags">Tags</label>
         <input class="form-control" id="tags" placeholder="Attach tags"></input>
-        <div class="alert alert-danger collapse" role="alert">
+        <div class="alert alert-danger" role="alert">
             This field is empty!
         </div>
     </div>
