--- a/project/templates/ask_stranger/login.html
+++ b/project/templates/ask_stranger/login.html
@@ -10,13 +10,13 @@
 
     <label for="inputEmail" class="sr-only">Email address</label>
     <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-    <div class="alert alert-danger collapse" role="alert">
+    <div class="alert alert-danger" role="alert">
         Wrong email!
     </div>
 
     <label for="inputPassword" class="sr-only">Password</label>
     <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-    <div class="alert alert-danger collapse" role="alert">
+    <div class="alert alert-danger" role="alert">
         Wrong password!
     </div>
 
