--- a/project/templates/ask_stranger/signup.html
+++ b/project/templates/ask_stranger/signup.html
@@ -8,19 +8,19 @@
 
     <label for="name" class="sr-only">Name</label>
     <input type="text" id="name" class="form-control" placeholder="Name" required autofocus>
-    <div class="alert alert-danger collapse" role="alert">
+    <div class="alert alert-danger" role="alert">
       Sorry, this name already exists!
     </div>
 
     <label for="inputEmail" class="sr-only">Email address</label>
     <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required>
-    <div class="alert alert-danger collapse" role="alert">
+    <div class="alert alert-danger" role="alert">
       Sorry, this email address already exists!
     </div>
 
     <label for="inputPassword" class="sr-only">Password</label>
     <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-    <div class="alert alert-danger collapse" role="alert">
+    <div class="alert alert-danger" role="alert">
       Sorry, this password is too simple: /* some password rules */!
     </div>
 
