--- a/project/templates/ask_stranger/index.html
+++ b/project/templates/ask_stranger/index.html
@@ -1,10 +1,37 @@
 {% extends "ask_stranger/base.html" %}
+{% load static %}
 
 {% block content %}
-    <ul>
-        {% for question in questions %}
-        <li><a href="{% url 'ask_stranger:question' question_id=question.id  %}">{{ question.title }}</a></li>
-        {% endfor %}
-    </ul>
+{% for question in questions %}
+<div class="card col-md-12 p-3 question-item">
+    <div class="row ">
+        <div class="col-md-2">
+            <img class="w-100" src="{% static "img/APO.jpg" %}">
+        </div>
+        <div class="col-md-10">
+            <div class="card-block">
+                <h6 class="card-title">{{ question.title }}</h6>
+                <p>Author: {{ question.author }}</p>
+                <p class="card-text text-justify">{{ question.test }}</p>
+                <a href="/question/{{ question.id }}" class="btn btn-primary">read more...</a>
+                <a href="#" class="btn btn-primary">Like</a>
+                <a href="#" class="btn btn-danger">Dislike</a>
+            </div>
+            <div class="card-footer">
+                <p>
+                    <small class="text-muted">Created at: {{ question.create_date }}</small>
+                </p>
+                <p>
+                    <small class="text-muted">Likes: {{ question.likes }} </small>
+                </p>
+                <p>
+                    <small class="text-muted">Dislikes: {{ question.dislikes }} </small>
+                </p>
+            </div>
+        </div>
+
+    </div>
+</div>
+{% endfor %}
 {% endblock %}
 
