--- a/project/templates/ask_stranger/question.html
+++ b/project/templates/ask_stranger/question.html
@@ -1,16 +1,47 @@
 {% extends "ask_stranger/base.html" %}
+{% load static %}
 
 {% block content %}
 <h2>{{ question.title }}</h2>
-<hr>
-<h3>{{ question.text }}</h3>
-<hr>
-<h4> Answers: </h4>
+<h3>Tags:</h3>
 <ul>
-    {% for answer in answers %}
-    <li>{{ answer.user }}: {{ answer.text }}</li>
+    {% for tag in tags %}
+    <li>tag.name</li>
     {% endfor %}
 </ul>
+
+
+<hr>
+{% for answer in answers %}
+<div class="container-fluid">
+    <div class="row question-item">
+        <div class="card ">
+            <div class="card-header">
+                <img class="card-img-top w-25" src="{% static "img/APO.jpg" %}"
+                alt="{{ answer.author }}">
+                <p>Author: {{ answer.author }}</p>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">{{ answer.text }}</h5>
+                <a href="#" class="btn btn-primary">Like</a>
+                <a href="#" class="btn btn-danger">Dislike</a>
+            </div>
+
+            <div class="card-footer">
+                <p>
+                    <small class="text-muted">Created at: {{ answer.create_date }}</small>
+                </p>
+                <p>
+                    <small class="text-muted">Likes: {{ answer.likes }} </small>
+                </p>
+                <p>
+                    <small class="text-muted">Dislikes: {{ answer.dislikes }} </small>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+{% endfor %}
 
 {% endblock %}
 
