js dependencies are now taken from static files

--- a/project/templates/ask_stranger/index.html
+++ b/project/templates/ask_stranger/index.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+    <h3>{{ description }}</h3>
 {% for question in questions %}
 <div class="card col-md-12 p-3 question-item">
     <div class="row ">
