--- a/project/templates/ask_stranger/base.html
+++ b/project/templates/ask_stranger/base.html
@@ -42,6 +42,7 @@
             </div>
             {% else %}
             <a href="{% url 'ask_stranger:login' %}">Войти</a>
+            <a href="{% url 'ask_stranger:signup' %}">Зарегестрироваться</a>
             {% endif %}
         </div>
     </div>
@@ -78,13 +79,13 @@
 </div>
 
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+<script src="{% static "js/jquery-3.2.1.slim.min.js" %}"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+<script src="{% static "js/popper.min.js" %}"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+<script src="{% static "bootstrap_v4/js/bootstrap.min.js" %}"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 </body>
